Fixes search bar
Search bar was misaligned

--- a/design/custom.css
+++ b/design/custom.css
@@ -8179,7 +8179,7 @@ table.PreferenceGroup,
   float: right;
   width: 90px;
   position: relative;
-  padding: 6px 14px;
+  padding: 7px 15px;
   margin-top: -34px;
   -webkit-border-radius: 0 3px 3px 0;
   -moz-border-radius: 0 3px 3px 0;
